# app-service

./: .gitignore  Cargo.toml  build.sh  todo.sql
rpc/: Cargo.toml  build.rs
rpc/proto/: todo.proto
rpc/src/: lib.rs  main.rs
rpc/src/todo/: mod.rs
src/: main.rs
src/schema/todo/: mod.rs  todo_mutation.rs  todo_query.rs
