[package]
name = "SKP-SERVIVE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.0.1"
serde_json = "1"
serde = "1"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rayon = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-appender = "0.2"
openssl = { version = "0.10", features = ["v110"] }
openssl-sys = "0.9"
