[package]
name = "skp-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4.0.1", features = ["openssl"] }
serde_json = "1"
serde = "1"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rayon = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
tracing-futures = "0.2"
tracing-appender = "0.2"
tracing-attributes = "0.1"
openssl = { version = "0.10", features = ["v110"] }
openssl-sys = "0.9"
async-graphql = "3"
async-graphql-actix-web = "3"
