[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "service"
path = "src/main.rs"

[[bin]]
name = "rpc"
path = "rpc/src/main.rs"

[workspace]

members = ["rpc"]

[dependencies]
actix = "0.13"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-cors = "0.6"
serde_json = "1"
serde = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rayon = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
tracing-futures = "0.2"
tracing-appender = "0.2"
tracing-attributes = "0.1"
rustls = "0.20"
rustls-pemfile = "1"
async-graphql = "3"
async-graphql-actix-web = "3"
rpc = { path = "rpc" }
tonic = { version = "0.7", features = ["compression", "tls"] }
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "json",
  "macros",
  "chrono",
  "uuid",
  "postgres",
] }
chrono = { version = "0.4", features = ["serde"] }
