[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.6", features = ["compression", "tls"]}
tokio = { version = "1.17", features = ["full"] }
serde_json = "1"
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
futures-util = "0.3"
postgres-types = "0.2"
rustls = "0.20"
rustls-pemfile = "0.3"
prost = "0.9"
prost-types = "0.9"
async-stream = "0.3"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "json", "macros", "chrono", "uuid", "postgres"] }
async-graphql = "3"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.6", features = ["prost", "compression"] }
